# deplodocker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
deplodocker/: cli.py  formatter.py  loader.py  stainer.py
tests/: test_version.py
