[tool.poetry]
name = "deplodocker"
version = "0.1.2"
description = "Locker of dependency files for deploy in docker and etc."
authors = ["RCheese <ruslan.v.samoylov@gmail.com>"]
license = "MIT"
repository = "https://github.com/RCheese/deplodocker"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10"
click = "^7.1"
orjson = { version = "^3.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10"
black = "^20.8b1"
pre-commit = "*"
isort = { version = "*", extras = ["pyproject"] }

[tool.poetry.extras]
speedups = ["orjson"]

[tool.black]
line_length = 120
multi_line_output = 3
length_sort = true
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s -vv"
testpaths = [
    "tests",
    "test_*",
    "tests_*",
    "*_test",
    "*_tests"
]
python_files = [
    "tests.py",
    "test_*.py",
    "tests_*.py",
    "*_test.py",
    "*_tests.py"
]

[tool.poetry.scripts]
deplodocker = "deplodocker.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
